--- a/1/index.html
+++ b/1/index.html
@@ -15,3 +15,6 @@ Pada pertemuan 1, membahas tentang :<br>
 8.	Tujuan mata Kuliah Analisis dan Perancangan RPL untuk menerapkan UML pada persiapan mengahadapi KP.<br>
 9.	Membuat kelompok presentasi sebanyak 3 orang 1 kelompok.<br>
 10.	Penggunaan Sofware pada mata kuliah ini adalah Astah Community 6.<br>
+<br>
+<br>
+<img src="ss1.png">
