--- a/2/index.html
+++ b/2/index.html
@@ -15,6 +15,6 @@ kelompok  :ti6a<br>
   <li>file astah yang telah dibuat bisa disimpan dalam format file.asta dan png(menggunakan paint)</li>
 </ol>
 <br><br>
-hasil file project astah <a href="" target="_blank">Download</a>
+hasil file project astah <a href="AD Berjalan.asta" target="_blank">Download</a>
 <br><br>
-<img src="" width="100%">
+<img src="AD Berjalan.png" width="100%">
