--- a/2/index.html
+++ b/2/index.html
@@ -2,6 +2,8 @@ nim       :1811500059<br>
 nama      :rismalina<br>
 kelompok  :ti6a<br>
 <br>
+hasil saya menyadur, pada pertemuan 2 membahas tentang :
+<br>
 <ol>
   <li>perhitungan nilai kehadiran cukup dengan membuat file index.html di setiap direktori pertemuan di github (angka) </li>
   <li>menyimpulkan apa yang di sampaikan oleh pengajar pada setiap video pembelajaran </li>
