--- a/2/index.html
+++ b/2/index.html
@@ -1,8 +1,8 @@
-nim       :1811500059<br>
-nama      :rismalina<br>
-kelompok  :ti6a<br>
+NIM : 181150059<br>
+NAMA : RISMALINA<br>
+KELOMPOK : TI6A<br>
 <br>
-hasil saya menyadur, pada pertemuan 2 membahas tentang :
+Hasil saya menyadur, pada pertemuan 2 membahas tentang :
 <br>
 <ol>
   <li>perhitungan nilai kehadiran cukup dengan membuat file index.html di setiap direktori pertemuan di github (angka) </li>
