--- a/3/index.html
+++ b/3/index.html
@@ -1,3 +1,24 @@
-NIM : 1811500059
-NAMA : RISMALINA
-KELOMPOK : TI 6 A
+NIM : 1811500059<br>
+NAMA : RISMALINA<br>
+KELOMPOK : TI6A<br>
+<br>
+Hasil saya menyadur :<br>
+<br>
+Pada Pertemuan 3 membahas tentang , <br>
+<br>
+1.	Proses Bisnis Sistem Usulan, dan Activity Diagram Sistem Usulan<br>
+2.	Membahas perhitungan nilai kehadiran cukup dengan membuat file index.html di setiap direktori / folder di setiap pertemuan di github (angka).<br>
+    Dengan menuliskan NIM,NAMA dan KELOMPOK lalu menyalin link github dan mengirimkannya ke pengajar melalui Telegram, minimal 1 jam setelah pertemuan.<br>
+3.	Analisa system usulan terdiri dari Analisa solusi system yang diusulkan, Analisa proses bisnis system  yang diusulkan dan <br>
+    Activity Diagram untuk memodelkan system usulan.<br>
+4.	pada pertemuan kali ini mahasiswa juga diberikan sebuah studi kasus Analisis system usulan berdasarkan hasil Analisa masalah pada system berjalan<br>
+    yaitu menganalisa dan merancang aplikasi pemesanan suku cadang motor pada TOKO KEMBAR JAYA yang berbasis Android.<br>
+    System yang diusulkan diharapkan dapat memberikan solusi pada masalah yang ada.<br>
+5.	Tujuan aplikasi tersebut agar konsumen tidak perlu datang ke toko secara langsung.<br>
+    Sehingga konsumen dapat menghemat waktu dan biaya begitupun pegawai toko. pegawai toko dapat digantikan oleh aplikasi untuk melayani konsumen.<br>
+6.	Pengajar menjelaskan prosedur atau Langkah-langkah untuk menganalisa masalah pada studi kasus tersebut.<br>
+7.	Pengajar menjelaskan mengenai Activity Diagram dan Struktur-struktur pada activity diagram<br>
+8.	Pengajar menjelaskan dan membuat activity diagram untuk studi kasus tersebut<br>
+9.	Software yang digunakan yaitu, Astah Community 6.<br>
+10.	System usulan itu harus memperoleh manfaat bagi stakeholder (misalnya : pelayan toko dan konsumen) manfaat ini biasanya untuk memudahkan proses bisnis.<br>
+11.	Activity Diagram digunakan untuk menggambarkan proses bisnis bukan detail pada suatu halaman. Detail suatu halaman digambarkan menggunakan sequence diagram.<br>
