--- a/3/index.html
+++ b/3/index.html
@@ -22,3 +22,9 @@ Pada Pertemuan 3 membahas tentang , <br>
 9.	Software yang digunakan yaitu, Astah Community 6.<br>
 10.	System usulan itu harus memperoleh manfaat bagi stakeholder (misalnya : pelayan toko dan konsumen) manfaat ini biasanya untuk memudahkan proses bisnis.<br>
 11.	Activity Diagram digunakan untuk menggambarkan proses bisnis bukan detail pada suatu halaman. Detail suatu halaman digambarkan menggunakan sequence diagram.<br>
+<br>
+<br>
+hasil file project astah <a href="Activity Diagram 3.asta" target="_blank">Download</a>
+<br><br>
+<img src="AD 3.png" width="100%">
+
