--- a/4/index.html
+++ b/4/index.html
@@ -4,3 +4,30 @@ KELOMPOK : TI6A<br>
 <br>
 Hasil Saya Menyadur : <br>
 <br>
+Pada pertemuan 4 membahas tentang :<br>
+1.	Bagaimana penggunaan usecase diagram dan pembuatan deskripsi usecase yang didalamnya sudah termasuk scenario usecase<br>
+2.	 Membuat Usecase Diagram untuk pengguna utama Perangkat Lunak<br>
+3.	 Membuat Usecase Diagram untuk admin utama Perangkat Lunak<br>
+4.	Menggambarkan hubungan atau interaksi atau apa yang bisa dilakukan aktor dengan sistem(dalam hal ini bisa 1 aktor atau lebih)<br>
+5.	Pengajar mengingatkan cara absen dengan membuat file readme.md di github dengan menulis Nama, Nim dan Kelompok. dan menjelaskan tugas , uts dan uas.<br>
+    Tugas pada matakuliah ini membuat file index.html digithub lalu meyimpulkan/ menyadurkan disetiap pertemuan.<br>
+6.	Usecase diagram dibagi menjadi dua yaitu :<br>
+A. usecase diagram untuk pengguna utama perangkat lunak<br>
+B. usecase diagram untuk pengguna admin perangkat lunak<br>
+Actor dari usecase udiagram yaitu konsumen (pembeli) dan pelayan<br>
+7.	Terdapat 2 macam aktor yaitu :<br>
+--Aktor aktif(sebelah kiri di usecase diagram) yaitu Konsumen (berinteraksi langsung dengan sistem)<br>
+--Aktor pasif(sebelah kanan di usecase diagram) yaitu digambarkan jika pada aktor aktif memerlukan inputan. contoh dalam bentuk lisan,telepon ataupun langsung<br>
+8.	Usecase diagram yaitu menggambarkan hubungan/interaksi apa yang bisa dilakukan actor dengan system bisa satu aktor atau lebih<br>
+9.	Usecase diagram menggambarkan fungsi-fungsi yang dimiliki pada system<br>
+10.	Usecase diagram tidak menjelaskan secara detail tentang penggunaan usecase, namun hanya memberi gambaran singkat hubungan antara usecase, actor dan system.<br>
+12.	Actor yaitu siapa yang menggunakan system atau  bisa disebut pengguna/user<br>
+13.	Setiap usecase akan menjadi 1 rancangan layer/ tampilan layar/antarmuka<br>
+14.	Deskripsi usecase dan scenario usecase merupakan “satu paketan” yang dibuat sebagai table deskripsi<br>
+15.	Pada Usecase Diagram tidak menjelaskan secara detail mengenai penggunaan usecase namun hanya memberi gambaran singkat hubungan antara usecase,aktor dan sistem<br>
+
+<br><br>
+hasil file project astah <a href="pertemuan 4.asta" target="_blank">Download</a>
+<br><br>
+<img src="Pertemuan 4.png" width="100%">
+<img src="Pertemuan 4 ss.png" width="100%">
