--- a/4/index.html
+++ b/4/index.html
@@ -29,5 +29,5 @@ Actor dari usecase udiagram yaitu konsumen (pembeli) dan pelayan<br>
 <br><br>
 hasil file project astah <a href="pertemuan 4.asta" target="_blank">Download</a>
 <br><br>
-<img src="Pertemuan 4.png" width="100%">
-<img src="Pertemuan 4 ss.png" width="100%">
+<img src="pertemuan 4.png" width="100%">
+<img src="pertemuan 4 ss.png" width="100%">
