--- a/5/index.html
+++ b/5/index.html
@@ -3,3 +3,14 @@ NAMA : RISMALINA<br>
 KELOMPOK : TI6A<br>
 
 HASIL SAYA MENYADUR : <br>
+Pada pertemuan 5 membahas tentang :
+1.	Cara absen dengan membuat file README.md (wajib). Dan menuliskan Nama, NIM dan Kelompok
+2.	Nilai tugas diambil dari membuat saduran pada setiap pertemuan (wajib) dan menambahkan file pendukung seperti file astah dan file pensil project
+3.	Pada pertemuan ini pengajar memberikan langkah-langkah mendownload dan menginstal pensil project serta membuat file di pensil project
+4.	Setelah di instal ,pengajar menjelaskan Langkah-langkah membuat file pada pensil project. Yaitu
+    klik Create New Document > My Shape > pilih Mobile-Android ICS > setting (jika ingin mengatur Theme dan Text, jika sudah klik Apply) > Phone
+5. Membuat file Rancangan layar halaman login (konsumen), Konsumen wajib memiliki akun sebelum Login.
+   Jika belum memiliki akun, konsumen harus membuat akun dengan menekan tombol “Daftar”. 
+   Tetapi jika konsumen sudah memiliki akun konsumen tinggal memasukan username dan password lalu menekan tombol “Sign In”.
+5.	Membuat Rancangan Layar Daftar Akun (konsumen)
+6.	
