--- a/5/index.html
+++ b/5/index.html
@@ -9,8 +9,18 @@ Pada pertemuan 5 membahas tentang : <br>
 3.	Pada pertemuan ini pengajar memberikan langkah-langkah mendownload dan menginstal pensil project serta membuat file di pensil project<br>
 4.	Setelah di instal ,pengajar menjelaskan Langkah-langkah membuat file pada pensil project. Yaitu <br>
     klik Create New Document > My Shape > pilih Mobile-Android ICS > setting (jika ingin mengatur Theme dan Text, jika sudah klik Apply) > Phone <br>
-5.  Membuat file Rancangan layar halaman login (konsumen), Konsumen wajib memiliki akun sebelum Login. <br>
+5.  Membuat Rancangan layar halaman login (konsumen), Konsumen wajib memiliki akun sebelum Login. <br>
     Jika belum memiliki akun, konsumen harus membuat akun dengan menekan tombol “Daftar”. <br>
     Tetapi jika konsumen sudah memiliki akun konsumen tinggal memasukan username dan password lalu menekan tombol “Sign In”.<br>
-5.	Membuat Rancangan Layar Daftar Akun (konsumen)<br>
-6.	
+6.	Membuat Rancangan Layar Daftar Akun (konsumen)<br>
+    Menunjukan bagaimana konsumen dapat melakukan “Pendaftaran Akun”,  dengan mengisi nama lengkap, alamat, no hp/wa,username dan password.<br>
+    Jika konsumen menekan tombol “KEMBALI” maka akan menampilkan halaman “LOGIN”. 
+    Akan tetapi setelah menekan tombol “SIMPAN” maka system akan menyimpan data “Pendaftaran Akun”. <br>
+7.	Membuat Rancangan Layar Halaman Utama Aplikasi (Konsumen)<br>
+    pada halaman utama aplikasi terdapat menu katalog, keranjang,pesanan,dan logout. jika konsumen ingin melihat katalog suku cadang ,<br>
+    konsumen dapat menekan tombol "KATALOG. jika konsumen inget melakukan pemesanan, konsumen dapat menekan tombol "KERANJANG".<br>
+    jika konsumen ingin melihat Riwayat pemesanan konsumen dapat menekan tombol "PESANAN"<br>
+    dan jika konsumen ingin menyelesaikan kegiatan pemesanan konsumen dapat menekan tombol "LOGOUT" untuk keluar dari aplikasi suku cadang.<br>
+8.  Membuat Rancangan Layar keranjang belanja (Konsumen)
+9.  Membuat Rancangan Layar Pemesanan/Pesanan(Konsumen)
+
