--- a/5/index.html
+++ b/5/index.html
@@ -21,6 +21,10 @@ Pada pertemuan 5 membahas tentang : <br>
     konsumen dapat menekan tombol "KATALOG. jika konsumen inget melakukan pemesanan, konsumen dapat menekan tombol "KERANJANG".<br>
     jika konsumen ingin melihat Riwayat pemesanan konsumen dapat menekan tombol "PESANAN"<br>
     dan jika konsumen ingin menyelesaikan kegiatan pemesanan konsumen dapat menekan tombol "LOGOUT" untuk keluar dari aplikasi suku cadang.<br>
-8.  Membuat Rancangan Layar keranjang belanja (Konsumen)
-9.  Membuat Rancangan Layar Pemesanan/Pesanan(Konsumen)
+8.  membuat Rancangan Layar Katalog(konsumen) halaman Katalog memperlihatkan halaman katalog suku cadang yang dijual di. <br>
+9.  Membuat Rancangan Layar keranjang belanja (Konsumen), halaman ini konsumen dapat melihat suku cadang yang akan dipesan. <br>
+    Konsumen dapat menambahkan jumlah pesanan pada masing-masing suku cadang yang akan di pesan dan dan dapat mengubahnya. <br>
+    Setelah yakin dengan pesanan yang dipilih maka konsumen dapat meneken tombol “PESAN” untuk melakukan pemesanan.<br>
+10.  Membuat Rancangan Layar Pemesanan/Pesanan(Konsumen),konsumen dapat melihat secara jelas barang yang dipesan. Beserta jumlah pesanan dan total pembayaran.<br> 
+    Pada halaman pemesanan juga konsumen dapat melihat “STATUS PEMESANAN” misalnya sedang diproses, atau siap diambil. <br>
 
