--- a/5/index.html
+++ b/5/index.html
@@ -27,4 +27,14 @@ Pada pertemuan 5 membahas tentang : <br>
     Setelah yakin dengan pesanan yang dipilih maka konsumen dapat meneken tombol “PESAN” untuk melakukan pemesanan.<br>
 10.  Membuat Rancangan Layar Pemesanan/Pesanan(Konsumen),konsumen dapat melihat secara jelas barang yang dipesan. Beserta jumlah pesanan dan total pembayaran.<br> 
     Pada halaman pemesanan juga konsumen dapat melihat “STATUS PEMESANAN” misalnya sedang diproses, atau siap diambil. <br>
-
+<br>
+<br>
+hasil file RANCANGAN LAYAR (pensil project) <a href="rancangan layar.epgz" target="_blank">Download</a>
+hasil file RANCANGAN LAYAR (word) <a href="rancangan layar_sukucadang.docx" target="_blank">Download</a>
+<br>
+<br>
+<img src="Screenshot (58).png" width="100%">
+<br>
+<br>
+<img src="Screenshot (57).png" width="100%">
+© 2021 GitHub, Inc.
