--- a/5/index.html
+++ b/5/index.html
@@ -1,8 +1,9 @@
 NIM : 1811500059<br>
 NAMA : RISMALINA<br>
 KELOMPOK : TI6A<br>
-
+<br>
 HASIL SAYA MENYADUR : <br>
+<br>
 Pada pertemuan 5 membahas tentang : <br>
 1.	Cara absen dengan membuat file README.md (wajib). Dan menuliskan Nama, NIM dan Kelompok<br>
 2.	Nilai tugas diambil dari membuat saduran pada setiap pertemuan (wajib) dan menambahkan file pendukung seperti file astah dan file pensil project<br>
@@ -29,8 +30,8 @@ Pada pertemuan 5 membahas tentang : <br>
     Pada halaman pemesanan juga konsumen dapat melihat “STATUS PEMESANAN” misalnya sedang diproses, atau siap diambil. <br>
 <br>
 <br>
-hasil file RANCANGAN LAYAR (pensil project) <a href="rancangan layar.epgz" target="_blank">Download</a>
-hasil file RANCANGAN LAYAR (word) <a href="rancangan layar_sukucadang.docx" target="_blank">Download</a>
+hasil file RANCANGAN LAYAR (pensil project) <a href="rancangan layar.epgz" target="_blank">Download</a><br>
+hasil file RANCANGAN LAYAR (word) <a href="rancangan layar_sukucadang.docx" target="_blank">Download</a><br>
 <br>
 <br>
 <img src="Screenshot (58).png" width="100%">
