--- a/5/index.html
+++ b/5/index.html
@@ -30,8 +30,9 @@ Pada pertemuan 5 membahas tentang : <br>
     Pada halaman pemesanan juga konsumen dapat melihat “STATUS PEMESANAN” misalnya sedang diproses, atau siap diambil. <br>
 <br>
 <br>
-hasil file RANCANGAN LAYAR (pensil project) <a href="rancangan layar.epgz" target="_blank">Download</a><br>
-hasil file RANCANGAN LAYAR (word) <a href="rancangan layar_sukucadang.docx" target="_blank">Download</a><br>
+*hasil file RANCANGAN LAYAR (pensil project) <a href="rancangan layar.epgz" target="_blank">Download</a><br>
+<br>
+*hasil file RANCANGAN LAYAR (word) <a href="rancangan layar_sukucadang.docx" target="_blank">Download</a><br>
 <br>
 <br>
 <img src="Screenshot (58).png" width="100%">
