--- a/6/index.html
+++ b/6/index.html
@@ -4,3 +4,21 @@ KELOMPOK  : TI6A<br>
 
 Hasil Saya Menyadur : <br>
 <br>
+pada pertemuan 6 ini membahas tentang :<br>
+<br>
+1. Mempelajari class diagram, pengajar Menmberikan penjelasan tentang class diagram dan <br>
+   Memberikan tutorial membuat class diagram<br>
+2. mengingatkan mahasiswa tentang cara absen kehadiran<br>
+3. mengingatkan tentang persiapan uts<br>
+4. pengajar menjelaskan pertemuan 9 - 16, kegiatannya adalah presentasi kelompok mahasiswa, 1 pertemuan 2 kelompok = 6 mahasiswa (atau 3 kelompok jika memungkinkan)<br>
+5. Software yang digunakan adalah Astah Community 6 dan Microsoft Visio<br>
+6. untuk pertemuan 7 akan membahas Sequence Diagram + Kisi2 UTS + Kelompok Presentasi UAS<br>
+7.Kelompok TI6A: Sabtu, 5 Juni 2021 10:00 - 12:00<br>
+8.Kelompok TI6J: Sabtu, 5 Juni 2021 19:00 - 21:00<br>
+<br>
+<br>
+<br><br>
+hasil file project astah <a href="CDpertemuan6.asta" target="_blank">Download</a>
+<br>
+<br>
+<img src="Screenshot (93).png" width="100%">
